--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <title>Title</title>
 </head>
 <body>
+    <div></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
