--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 <title>Title</title>
 </head>
 <body>
-
+    <form id = stateForm>
+        <select id="stateInput"></select>
+        <button id = "findState" type="submit" value="stateSearch">"find State"</button>
+    </form>
+    <div id="stateDump"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="test.js" type="text/javascript"></script>
 </body>
 </html>
