--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
+<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
 
 <title>Title</title>
 </head>
 <body>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id = "dropdownMenuButton" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">Dropdown Button</button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        </div>
+    </div>
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script src = "landingPage.js"></script>
+<script src = "test.js"></script>
 </body>
 </html>
