Added functionality that connected google maps API to the webpage

--- a/google maps items/googleMapsAPI.html
+++ b/google maps items/googleMapsAPI.html
@@ -12,7 +12,8 @@
 </head>
 <body>
         <div id="map"></div>
-    
+
+<script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAenocerebZN6FNQCmbSGeob3BCCBjfKx4&callback=initMap"></script>       
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAenocerebZN6FNQCmbSGeob3BCCBjfKx4&callback=initMap"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
