--- a/index.html
+++ b/index.html
@@ -7,21 +7,62 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+<link rel="stylesheet" href="./openLayers/assets/style.css">
 
 <title>Title</title>
 </head>
 <body>
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id = "dropdownMenuButton" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">Dropdown Button</button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <header class = "bg-danger">
+        <p class="projectName text-center">COVID-19 TRACKER</p>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id = "dropdownMenuButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">Dropdown Button</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style = "max-height: 200px; overflow-y: auto;">
+            </div>
+        </div>
+    </header>
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header bg-secondary text-center" id = "stateSelected">
+                        State
+                    </div>
+                    <div class="card-body bg-success text-center" id="stateStatistics">State Stats
+                        <p>Positive Increases: <span id = "positiveIncrease" style = "font-weight: bold"></span></p>
+                        <p>Hospitalization Increase: <span id = "hospitalizeIncrease" style = "font-weight: bold"></span></p>
+                        <p>Total Positive Cases: <span id = "totalPosCases" style = "font-weight: bold"></span></p>
+                        <p>Individuals on Ventilator: <span id = "currentOnVentilator" style = "font-weight: bold"></span></p>
+                        <p>Confirmed Deaths: <span id = "confirmedDeaths" style = "font-weight: bold"></span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header bg-secondary text-center">World</div>
+                        <div class="card-body bg-primary text-center">World stats</div>
+                    </div>
+                </div>
+                
+                <div class="col-md-12">
+                    <div class="card">
+                        <!-- <div class="card-header bg-secondary text-center">Maps</div> -->
+                        <div class="card-body bg-primary text-center map" id = "map"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
 <script src = "test.js"></script>
+<script src = "./openLayers/assets/openLayers.js"></script>
 </body>
 </html>
