--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <tr>
                       <th class="col-xs-2 text-center" >Country Name</th>
                       <th class="col-xs-2 text-center" >Total Recovered</th>
-                      <th Deaths class="col-xs-2 text-center">Total Deaths</th>
+                      <th class="col-xs-2 text-center">Total Deaths</th>
                       <th class="col-xs-2 text-center" > New Confirmed</th> 
                       <th class="col-xs-2 text-center" >Total Confirmed</th>
                       <th class="col-xs-2 text-center">New Deaths</th>
@@ -90,7 +90,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
 <script src = "./assets/script.js"></script>
-<script src = "test.js"></script>
+<script src = "./assets/Worlddata.js"></script>
 <script src = "./assets/openLayers.js"></script>
 </body>
 </html>
