--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <table class="table table-fixed" >
                   <thead>
                     <tr>
-                      <th onclick="w3.sortHTML('.table', '.item', 'td:nth-child(1)')" style="cursor:pointer"class="col-xs-2 text-center" id="countrySort" >Country Name</th>
+                      <th class="col-xs-2 text-center" id="countrySort" >Country Name</th>
                       <th class="col-xs-2 text-center button" id="totalRecSort">Total Recovered</th>
                       <th class="col-xs-2 text-center button" id="totalDeathSort">Total Deaths</th>
                       <th class="col-xs-2 text-center button" id="newConfirmSort" > New Confirmed</th> 
