--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <button class="btn btn-secondary dropdown-toggle" type="button" id = "dropdownMenuButton" data-toggle="dropdown"
       aria-haspopup="true" aria-expanded="false">Dropdown Button</button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" style = "max-height: 200px; overflow-y: auto;">
-      </div>
+          
+       </div>
     </div>
   </header>
 
@@ -41,11 +42,11 @@
         <div class="col-md-4"> <!-- This column contains content for our state label and state statistics-->
           <div class="card" >
             <!-- state label -->
-            <div class="card-header bg-success text-center" id = "stateSelected">
+            <div class="card-header  text-center" id = "stateSelected">
               State
             </div>
             <!-- state stats -->
-            <div class="card-body bg-success text-center" id="stateCard">State Stats
+            <div class="card-body text-center" id="stateCard">State Stats
               <p>Positive Increases: <span id = "positiveIncrease" style = "font-weight: bold"></span></p>
               <p>Hospitalization Increase: <span id = "hospitalizeIncrease" style = "font-weight: bold"></span></p>
               <p>Total Positive Cases: <span id = "totalPosCases" style = "font-weight: bold"></span></p>
@@ -56,10 +57,10 @@
         </div>
     <!-- World Card -->
       <div class="col-md-8">
-        <div class="card bg-success ">
+        <div class="card">
           <!-- world table -->
           <div class="card-body text-center" id="worldCard">
-            <table class = "table table-striped">
+            <table class = "table">
               <thead class = "thead">
                 <tr scope = "row">
                   <th scope = "col">Country Name</th>
