Pushing current working site that includes working state information, dropdown menu, world information table, and navigatable map

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <table class = "table table-striped">
               <thead class = "thead">
                 <tr scope = "row">
-                  <th scope = "col">Country Name</th>
+                  <th scope = "col" class = "countryNameScope">Country Name</th>
                   <th scope = "col">Total Recovered</th>
                   <th scope = "col">Total Deaths</th>
                   <th scope = "col"> New Confirmed</th> 
                   <th scope = "col">Total Confirmed</th>
-                  <th scope = "col">New Deaths</th>
+                  <th scope = "col"></th>New Deaths</th>
                 </tr>
               </thead>
               <tbody class="countryName">
